newtype-tools/tests/newtype-fail/enum.stderr
error: expected `struct Type(inner_type)` or `struct Type { inner: type }`
 --> tests/newtype/enum.rs:4:1
  |
4 | enum Unit {}
  | ^^^^
