newtype-tools/tests/newtype-fail/enum.rs
use newtype_tools::Newtype;

#[derive(Newtype)]
enum Unit {}

fn main() {}
